# haskell-game

./: .gitignore  .gitmodules  README.md  haskell-game.cabal  package.yaml  shader.fs  shader.gs  shader.tcs  shader.tes  shader.vs  stack.yaml
app/: Main.hs
doc/: game.org
lib/bullet-hs/: .gitignore  ChangeLog.md  README.md  package.yaml
lib/bullet-hs/cbits/: CMakeCache.txt  CMakeLists.txt  Makefile  cbullet.cpp  cbullet.h  cmake_install.cmake  install_manifest.txt  libcbullet.so.1  libcbullet.so.1.0
lib/bullet-hs/src/: Lib.hs
lib/bullet-hs/src/Physics/: Bullet.chs
lib/foreign-objects/: ChangeLog.md  package.yaml  stack.yaml
lib/foreign-objects/lib/: ForeignObjects.hs
lib/foreign-objects/lib/Data/: StateVar.hs
lib/foreign-resource/: package.yaml
lib/foreign-resource/lib/: ForeignResource.hs
lib/foreign-resource/lib/Foreign/: Resource.hs
lib/graphics-binding/: package.yaml  stack.yaml
lib/graphics-binding/lib/Graphics/: Binding.hs
lib/graphics-binding/src/Graphics/: Binding.hs
lib/netwire-input-glfw/: netwire-input-glfw.cabal
lib/plugin/: .gitignore  package.yaml
lib/plugin/src/Plugin/: Load.hs  Types.hs
plugin/: package.yaml  plugin.cabal
plugin/src/Plugin/: Load.hs
res/: coca-cola.mtl
res/models/: Teapot.dae  coca-cola.mtl  golden_icosphere-2.dae  golden_icosphere.dae  icosahedron.dae
res/models/Bayonetta 1/: bayo_default.dae  info.txt  untitled.3ds
res/shaders/: gouraud.fsh  gouraud.vert  gouraud.vsh  normalmap.frag  normalmap.vert  phong.frag  phong.vert  shader.fsh  shader.tcs  shader.vs  shader.vsh  sobel.frag  toon.frag  toon.vert  tween.frag  tween.vert
res/textures/: specular1d.xcf
scripts/: ForeignEvent.hs  ForeignScript.hs  Movement.hs  Util.hs  a.out
src/: BulletHelloWorld.hs  Lib.hs  OpenALHelloWorld.hs
src/Game/: Entity.hs  Events.hs  Main.hs  Physics.hs  StorableTypes.hs  Types.hs  Wires.hs
src/Game/Entity/: Animate.hs  Camera.hs  Gfx.hs  GiantFeaturelessPlane.hs  Lfx.hs  Player.hs  Sfx.hs  WorldTransform.hs
src/Game/Graphics/: Binding.hs  Init.hs  OpenGLExtras.hs  Rendering.hs  Text.hs  Types.hs
src/Game/Graphics/HighLevel/: .#Types.hs  Program.hs  Types.hs
src/Game/Graphics/Lighting/: Basic.hs
src/Game/Graphics/Model/: AssImp.hs  Generator.hs  Loader.hs  ObjLoader.hs  Toon.hs
src/Game/Graphics/OpenGL/: Binding.hs  Boolean.hs  BufferObject.hs  DataType.hs  LowBinding.hs  LowTypes.hs  ObjectName.hs  PrimUniform.hs  Shader.hs  Texture.hs  Types.hs  Uniform.hs  Utils.hs  VertexArray.hs  Window.hs
src/Game/Graphics/Shader/: Loader.hs
src/Game/Script/: Installer.hs  Loader.hs
src/Game/World/: Physics.hs  Terrain.hs
src/Model/: Loader.hs
src/Physics/: Bullet.chs
(+37 files in other folders)
